[gd_scene load_steps=3 format=3 uid="uid://bj3tiwnqie15n"]

[ext_resource type="StyleBox" uid="uid://btifk3vr00fwd" path="res://styles/ResultRatingStyleEven.tres" id="1_1kq0a"]
[ext_resource type="Script" path="res://menus/pregame_screen/PreGameLeaderboardHistoryEntry.gd" id="1_xqhus"]

[node name="PreGameLeaderboardRank" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_1kq0a")
script = ExtResource("1_xqhus")
diff = null

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 7
theme_override_constants/margin_bottom = 7

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RatingRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="DiffLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
horizontal_alignment = 2
